--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       
    </main>
 
+   <!-- MARK: Footer -->
    <footer class="bg-veryDarkBlue" >
       <div class="container flex flex-col justify-between px-4 p-6 mx-auto space-y-2 md:space-y-0">
          <h4 class = "text-sm text-white text-center">Based on the <a href = "#" class = "text-brightRed">Your Life in Weeks</a> post by Tim Urban, from <a href = "#" class = "text-brightRed"> Wait But Why.</a></h4>
