--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
    </section>
   
    <!-- MARK : Name & DOB Form -->
-   <section id="form">
+   <section id="userForm">
       <div class="flex items-center justify-center">
-         <form class="flex flex-col space-y-2" id = "userForm">
+         <form class="flex flex-col space-y-2" id = "userFo rm">
             <input type="date" style = "width: 300px;" class="w-full px-4 py-2 rounded-full focus:outline-none justify-center text-center" id = "userDOB">
             <button class="p-2 text-center text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none" id = "formSubmit">Submit</button>
          </form>
